--- a/output.css
+++ b/output.css
@@ -700,8 +700,8 @@ video {
   top: 24rem;
 }
 
-.left-1\/2 {
-  left: 50%;
+.top-\[4\.5rem\] {
+  top: 4.5rem;
 }
 
 .z-10 {
@@ -710,10 +710,6 @@ video {
 
 .z-20 {
   z-index: 20;
-}
-
-.-z-10 {
-  z-index: -10;
 }
 
 .col-span-2 {
@@ -730,6 +726,11 @@ video {
   margin-right: auto;
 }
 
+.my-16 {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+
 .-mt-24 {
   margin-top: -6rem;
 }
@@ -740,6 +741,10 @@ video {
 
 .mb-16 {
   margin-bottom: 4rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
 .mb-3 {
@@ -774,6 +779,26 @@ video {
   margin-top: 2rem;
 }
 
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mt-16 {
+  margin-top: 4rem;
+}
+
+.mt-14 {
+  margin-top: 3.5rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .block {
   display: block;
 }
@@ -802,6 +827,10 @@ video {
   height: 0.75rem;
 }
 
+.h-32 {
+  height: 8rem;
+}
+
 .h-5 {
   height: 1.25rem;
 }
@@ -814,16 +843,12 @@ video {
   height: 16rem;
 }
 
-.h-\[220px\] {
-  height: 220px;
-}
-
 .h-\[320px\] {
   height: 320px;
 }
 
-.h-\[350px\] {
-  height: 350px;
+.h-\[360px\] {
+  height: 360px;
 }
 
 .h-\[86\%\] {
@@ -843,24 +868,24 @@ video {
   height: 100%;
 }
 
-.h-6 {
-  height: 1.5rem;
+.h-52 {
+  height: 13rem;
 }
 
-.h-\[360px\] {
-  height: 360px;
+.max-h-\[8rem\] {
+  max-height: 8rem;
 }
 
-.h-8 {
-  height: 2rem;
+.min-h-\[8rem\] {
+  min-height: 8rem;
 }
 
 .min-h-screen {
   min-height: 100vh;
 }
 
-.min-h-\[8rem\] {
-  min-height: 8rem;
+.min-h-\[10rem\] {
+  min-height: 10rem;
 }
 
 .w-12 {
@@ -875,16 +900,16 @@ video {
   width: 0.75rem;
 }
 
-.w-4 {
-  width: 1rem;
-}
-
 .w-5 {
   width: 1.25rem;
 }
 
 .w-52 {
   width: 13rem;
+}
+
+.w-6 {
+  width: 1.5rem;
 }
 
 .w-64 {
@@ -895,14 +920,6 @@ video {
   width: 2rem;
 }
 
-.w-\[260px\] {
-  width: 260px;
-}
-
-.w-\[26em\] {
-  width: 26em;
-}
-
 .w-\[26rem\] {
   width: 26rem;
 }
@@ -911,8 +928,8 @@ video {
   width: 30rem;
 }
 
-.w-\[400px\] {
-  width: 400px;
+.w-\[38rem\] {
+  width: 38rem;
 }
 
 .w-\[430px\] {
@@ -931,6 +948,10 @@ video {
   width: 70%;
 }
 
+.w-\[700px\] {
+  width: 700px;
+}
+
 .w-\[80\%\] {
   width: 80%;
 }
@@ -943,20 +964,45 @@ video {
   width: 90%;
 }
 
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .w-full {
   width: 100%;
 }
 
-.w-\[700px\] {
-  width: 700px;
+.w-\[3rem\] {
+  width: 3rem;
 }
 
-.w-\[22rem\] {
-  width: 22rem;
+.w-\[40rem\] {
+  width: 40rem;
 }
 
-.w-\[95\%\] {
-  width: 95%;
+.w-\[rem\] {
+  width: rem;
+}
+
+.w-\[60rem\] {
+  width: 60rem;
+}
+
+.w-\[50rem\] {
+  width: 50rem;
+}
+
+.w-\[48rem\] {
+  width: 48rem;
+}
+
+.w-\[5rem\] {
+  width: 5rem;
+}
+
+.w-\[54rem\] {
+  width: 54rem;
 }
 
 .max-w-3xl {
@@ -979,25 +1025,36 @@ video {
   max-width: 20rem;
 }
 
-.max-w-\[700px\] {
-  max-width: 700px;
+.max-w-\[\] {
+  max-width: ;
+}
+
+.max-w-\[80\%\] {
+  max-width: 80%;
+}
+
+.max-w-\[9\%\] {
+  max-width: 9%;
+}
+
+.max-w-\[90\%\] {
+  max-width: 90%;
+}
+
+.max-w-\[7\%\] {
+  max-width: 7%;
+}
+
+.max-w-\[75\%\] {
+  max-width: 75%;
 }
 
 .flex-none {
   flex: none;
 }
 
-.flex-1 {
-  flex: 1 1 0%;
-}
-
 .flex-grow {
   flex-grow: 1;
-}
-
-.-translate-x-20 {
-  --tw-translate-x: -5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .-translate-x-24 {
@@ -1040,23 +1097,58 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-y-64 {
-  --tw-translate-y: 16rem;
+.-translate-y-\[32\] {
+  --tw-translate-y: -32;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-x-1\/2 {
-  --tw-translate-x: -50%;
+.-translate-y-\[32px\] {
+  --tw-translate-y: -32px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-y-8 {
-  --tw-translate-y: -2rem;
+.-translate-y-16 {
+  --tw-translate-y: -4rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-y-4 {
-  --tw-translate-y: 1rem;
+.-translate-y-20 {
+  --tw-translate-y: -5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-24 {
+  --tw-translate-y: -6rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-\[320px\] {
+  --tw-translate-y: -320px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-\[32rem\] {
+  --tw-translate-y: -32rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-\[\] {
+  --tw-translate-y: ;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-\[100rem\] {
+  --tw-translate-y: 100rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-\[100rem\] {
+  --tw-translate-y: -100rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-\[10rem\] {
+  --tw-translate-y: -10rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1184,10 +1276,6 @@ video {
   gap: 0.75rem;
 }
 
-.gap-6 {
-  gap: 1.5rem;
-}
-
 .gap-8 {
   gap: 2rem;
 }
@@ -1197,12 +1285,12 @@ video {
        column-gap: 4rem;
 }
 
-.gap-y-8 {
-  row-gap: 2rem;
-}
-
 .gap-y-12 {
   row-gap: 3rem;
+}
+
+.gap-y-8 {
+  row-gap: 2rem;
 }
 
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
@@ -1213,6 +1301,14 @@ video {
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-visible {
+  overflow: visible;
+}
+
+.overflow-y-auto {
+  overflow-y: auto;
 }
 
 .whitespace-nowrap {
@@ -1229,10 +1325,6 @@ video {
 
 .rounded-lg {
   border-radius: 0.5rem;
-}
-
-.rounded-sm {
-  border-radius: 0.125rem;
 }
 
 .border-2 {
@@ -1273,11 +1365,6 @@ video {
   border-color: rgb(221 190 169 / var(--tw-border-opacity, 1));
 }
 
-.border-dark-brown {
-  --tw-border-opacity: 1;
-  border-color: rgb(111 78 55 / var(--tw-border-opacity, 1));
-}
-
 .border-green-200 {
   --tw-border-opacity: 1;
   border-color: rgb(173 186 132 / var(--tw-border-opacity, 1));
@@ -1286,6 +1373,11 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 253 239 / var(--tw-border-opacity, 1));
+}
+
+.bg-\[\#4F5A5D\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(79 90 93 / var(--tw-bg-opacity, 1));
 }
 
 .bg-amber-700 {
@@ -1306,6 +1398,11 @@ video {
 .bg-brown {
   --tw-bg-opacity: 1;
   background-color: rgb(221 190 169 / var(--tw-bg-opacity, 1));
+}
+
+.bg-brown-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(212 162 127 / var(--tw-bg-opacity, 1));
 }
 
 .bg-green {
@@ -1363,20 +1460,6 @@ video {
   background-color: rgb(252 222 110 / var(--tw-bg-opacity, 1));
 }
 
-.bg-\[\#4F5A5D\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(79 90 93 / var(--tw-bg-opacity, 1));
-}
-
-.bg-gray-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[url\(\'\.\/static\/PixelArt\/boardAndShelves\.png\'\)\] {
-  background-image: url('./static/PixelArt/boardAndShelves.png');
-}
-
 .bg-\[url\(\'\.\/static\/backgroundSprite_Blue\.png\'\)\] {
   background-image: url('./static/backgroundSprite_Blue.png');
 }
@@ -1401,20 +1484,8 @@ video {
   background-size: 400px 400px;
 }
 
-.bg-contain {
-  background-size: contain;
-}
-
-.bg-center {
-  background-position: center;
-}
-
 .bg-repeat {
   background-repeat: repeat;
-}
-
-.bg-no-repeat {
-  background-repeat: no-repeat;
 }
 
 .object-cover {
@@ -1424,6 +1495,10 @@ video {
 
 .p-10 {
   padding: 2.5rem;
+}
+
+.p-12 {
+  padding: 3rem;
 }
 
 .p-14 {
@@ -1450,8 +1525,8 @@ video {
   padding: 2rem;
 }
 
-.p-12 {
-  padding: 3rem;
+.p-20 {
+  padding: 5rem;
 }
 
 .px-1 {
@@ -1494,28 +1569,19 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.py-\[3px\] {
-  padding-top: 3px;
-  padding-bottom: 3px;
-}
-
 .py-20 {
   padding-top: 5rem;
   padding-bottom: 5rem;
 }
 
-.pb-10 {
-  padding-bottom: 2.5rem;
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-\[3px\] {
+  padding-top: 3px;
+  padding-bottom: 3px;
 }
 
 .pl-4 {
@@ -1524,14 +1590,6 @@ video {
 
 .pr-24 {
   padding-right: 6rem;
-}
-
-.pt-20 {
-  padding-top: 5rem;
-}
-
-.pt-\[70px\] {
-  padding-top: 70px;
 }
 
 .text-left {
@@ -1616,8 +1674,16 @@ video {
   opacity: 0;
 }
 
-.opacity-20 {
-  opacity: 0.2;
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-lg {
@@ -1630,23 +1696,6 @@ video {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-2xl {
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.blur-xl {
-  --tw-blur: blur(24px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition {
@@ -1712,11 +1761,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.hover\:text-gray-300:hover {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity, 1));
-}
-
 .hover\:text-gray-800:hover {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity, 1));
@@ -1758,40 +1802,12 @@ video {
     height: 8rem;
   }
 
-  .md\:h-\[270px\] {
-    height: 270px;
-  }
-
-  .md\:h-\[432px\] {
-    height: 432px;
-  }
-
   .md\:w-52 {
     width: 13rem;
   }
 
-  .md\:w-6 {
-    width: 1.5rem;
-  }
-
-  .md\:w-60 {
-    width: 15rem;
-  }
-
-  .md\:w-\[354px\] {
-    width: 354px;
-  }
-
-  .md\:w-\[554px\] {
-    width: 554px;
-  }
-
   .md\:w-\[70\%\] {
     width: 70%;
-  }
-
-  .md\:gap-6 {
-    gap: 1.5rem;
   }
 
   .md\:gap-y-32 {
@@ -1823,11 +1839,6 @@ video {
 
   .md\:text-lg {
     font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-
-  .md\:text-xl {
-    font-size: 1.25rem;
     line-height: 1.75rem;
   }
 }
